<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/fullNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_full_name" />

        <EditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_full_name"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_email" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_email"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/optInEmailUpdatesCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_opt_in_email_updates" />

        <TextView
            android:id="@+id/phoneLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_phone" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_phone"
            android:inputType="phone"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/phoneTypeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_phone_type" />

        <Spinner
            android:id="@+id/phoneTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/phone_type_options"
            android:minHeight="48dp" />

        <CheckBox
            android:id="@+id/addMobilePhoneCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_add_mobile_phone" />

        <TextView
            android:id="@+id/mobilePhoneLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_mobile_phone" />

        <EditText
            android:id="@+id/mobilePhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_mobile_phone"
            android:inputType="phone"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/sexLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_sex" />

        <RadioGroup
            android:id="@+id/sexRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/masculinoRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sex_m" />

            <RadioButton
                android:id="@+id/femininoRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sex_f" />
        </RadioGroup>

        <TextView
            android:id="@+id/birthdateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_birthdate" />

        <EditText
            android:id="@+id/birthdateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_dob"
            android:inputType="date"
            android:focusable="false"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/educationLevelLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_education_level" />

        <Spinner
            android:id="@+id/educationLevelSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/education_levels"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/graduationYearLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_graduation_year"
            android:visibility="gone" />

        <EditText
            android:id="@+id/graduationYearEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_graduation_year"
            android:inputType="date"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/institutionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_institution"
            android:visibility="gone" />

        <EditText
            android:id="@+id/institutionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_institution"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/thesisTitleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_thesis_title"
            android:visibility="gone" />

        <EditText
            android:id="@+id/thesisTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_thesis_title"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/advisorTitleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_advisor"
            android:visibility="gone" />

        <EditText
            android:id="@+id/advisorTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_advisor"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/interestLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_interest" />

        <EditText
            android:id="@+id/interestEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_interest"
            android:inputType="textMultiLine"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:width="120dp"
                android:text="@string/btn_save"
                app:layout_constraintEnd_toStartOf="@+id/btnSpacer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:id="@+id/btnSpacer"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/clearButton"
                app:layout_constraintStart_toEndOf="@+id/saveButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/clearButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:width="120dp"
                android:text="@string/btn_reset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnSpacer"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>